--- a/_extensions/gatech/_extension.yml
+++ b/_extensions/gatech/_extension.yml
@@ -1,5 +1,5 @@
 title: Gatech
-author: Brendan Gould
+author: Brendan Gould & Evanns Morales
 version: 1.0.0
 quarto-required: ">=1.7.0"
 contributes:
