fixed weird slides glitch

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,9 +3,9 @@ project:
   resources:
     - assets
 format: gatech-revealjs
-# engine: jupyter
+engine: jupyter
 
-toc: true
+# toc: true
 slide-number: c/t
-number-sections: false
+# number-sections: false
 bibliography: references.bib
