--- a/_extensions/evannsm/gatech/_extension.yml
+++ b/_extensions/evannsm/gatech/_extension.yml
@@ -8,5 +8,6 @@ contributes:
       width: 1600
       height: 900
       theme: [custom.scss]
+      include-after-body: skip-section.html
       format-resources:
         - assets
