document new feature in THEME_DOCUMENTATION.md and cleaned up main files

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 format: gatech-revealjs
 engine: jupyter
 
-# toc: true
+toc: true
 slide-number: c/t
 # number-sections: false
 bibliography: references.bib
