fixed skip section title to avoid hard-coding

--- a/_extensions/gatech/_extension.yml
+++ b/_extensions/gatech/_extension.yml
@@ -8,6 +8,6 @@ contributes:
       width: 1600
       height: 900
       theme: [custom.scss]
-      include-after-body: skip-section.html
+      # include-after-body: assets/skip-section.html
       format-resources:
         - assets
