--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,3 +9,4 @@ toc: true
 slide-number: c/t
 # number-sections: false
 bibliography: references.bib
+include-after-body: _extensions/gatech/assets/skip-section.html
