--- a/_extensions/gatech/_extension.yml
+++ b/_extensions/gatech/_extension.yml
@@ -8,6 +8,9 @@ contributes:
       width: 1600
       height: 900
       theme: [custom.scss]
+      include-after-body:
+        - text: |
+            <script src="_extensions/gatech/assets/slide-refs.js"></script>
       format-resources:
         - assets
 
