--- a/_extensions/gatech/_extension.yml
+++ b/_extensions/gatech/_extension.yml
@@ -7,6 +7,8 @@ contributes:
     revealjs:
       width: 1600
       height: 900
+      filters: [bg.lua]
       theme: [custom.scss]
-      format-resources:
-        - assets
+      title-slide-attributes:
+        data-background-image: assets/background_title.png
+        data-background-size: cover
